--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
             <div class="alert alert-secondary alert-dismissible shadow-inset fade show" role="alert">
                     <span
                             class="alert-inner--icon"><span class="fas fa-exclamation-circle"></span></span> <span
-                    class="alert-inner--text"><strong>Warning!</strong> {{ message }}</span>
+                    class="alert-inner--text"><strong>Action!</strong> {{ message }}</span>
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                         aria-hidden="true">×</span></button>
             </div>
