--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -118,6 +118,9 @@
           </td>
 
     </tr>
+                  {% empty %}
+                        <h5 class="card-title" style="text-decoration: underline;">No Favorites</h5>
+
 
 {% endfor %}
 
