--- a/templates/home.html
+++ b/templates/home.html
@@ -94,11 +94,11 @@
   background-size: cover;">
 
 {% endif %}
-
-
+       <span  style="font-size: 2em; color: dimgray;">
+<i class="fas fa-sort-down"></i>
+ </span>
        </a>
 
-     <a class="" href="{% url 'logout' %}">Logout</a>
 
           </div>
 
