--- a/templates/profile.html
+++ b/templates/profile.html
@@ -137,6 +137,8 @@
     <br>
    Joined on  : {{ user.date_joined }}
 
+<br>
+              <a class="" href="{% url 'logout' %}">Logout</a>
 
 
                      </div>
