--- a/templates/my_blogs.html
+++ b/templates/my_blogs.html
@@ -20,110 +20,293 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
+
+
+
+
+
+
+
+
+
+    <!-- Header -->
+    <header class="">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+
+
+
+          <a class="navbar-brand" href="{% url 'home' %}"><h2>zizo pixels <em>.</em></h2></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'home' %}">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+
+
+
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Activities
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="{% url 'favorites' %}">Favorites</a>
+              <a class="dropdown-item" href="{% url 'my_followed' %}">My followed</a>
+             <a class="dropdown-item" href="{% url 'my_blogs' %}">My Blogs</a>
+            <a class="dropdown-item" href="{% url 'my_followers' user.id%}">My followers</a>
         </div>
       </li>
 
-    </ul>
-       <a class="" href="{% url 'add_blog' %}">Add</a>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-
-        Welcome {{ user.get_username }} //
-
-     <a class="" href="{% url 'logout' %}">Logout</a>
-
-    </form>
-  </div>
-</nav>
 
 
+              <li class="nav-item">
+               <a class="" href="{% url 'add_blog'  %}">Add blog </a>
+              </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
 
-
-<div class="container">
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact Us</a>
+              </li>
+            </ul>
 
 
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#Category </th>
-      <th scope="col">Title</th>
-      <th scope="col">Author</th>
-      <th scope="col">Content</th>
-      <th scope="col">Published</th>
+       <a href="{% url 'profile' user.id %}" >
 
-        {% if user.id == blogs.user.id%}
-
-      <th scope="col">Delete</th>
-      <th scope="col">Update</th>
-        {% endif %}
+  Welcome-{{ user.get_username }}
+       <span  style="font-size: 2em; color: dimgray;">
+<i class="fas fa-sort-down"></i>
+ </span>
+       </a>
 
 
-
-    </tr>
-  </thead>
-  <tbody>
-    {% for my in my  %}
-    <tr>
-      <th scope="row">{{ my.category }}</th>
-      <td>{{ my.title }}</td>
-      <td>
-    <a href="{% url 'user' my.id %}" >
-
-          {{ my.user}}
-        </a>
-    </td>
-      <td>{{ my.content }}</td>
-      <td>{{ my.created }}</td>
-      <td>
-           {% if user.id == my.user.id%}
-     <a class="btn btn-primary btn-sm" href="{% url 'delete_blog' my.id %}" onclick="return confirm('Are you sure you want to delete blog?')" >Delete</a>
-    </td>
-      <td>
-     <a class="btn btn-primary btn-sm" href="{% url 'edit' my.id %}" >Edit</a>
-    </td>
-    {% endif %}
-
-
-
-    </tr>
-
-
-   {% endfor %}
-
-
-  </tbody>
-</table>
+          </div>
 
 
 
 
-</div>
+        </div>
+      </nav>
+    </header>
+
+
+
+
+
+<br>
+    <br>
+
+
+
+    <section class="blog-posts">
+
+
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="all-blog-posts">
+              <div class="row">
+
+ {% for my in my %}
+                <div class="col-lg-12">
+                  <div class="blog-post">
+                    <div class="blog-thumb">
+                        <a href="{% url 'read_more' my.id %}">
+                      <img src="{{ my.image.url }}" alt="">
+                        </a>
+                    </div>
+                    <div class="down-content">
+                        <a href="{% url 'read_more' my.id %}">
+                      <span>  {{ my.title }}</span>
+                            </a>
+
+                      <ul class="post-info">
+                        <li><a href="{% url 'user' my.id %}">
+
+
+                            {{ my.user}}</a></li>
+                        <li><a href="#">{{ my.created }}</a></li>
+
+                      </ul>
+                      <p>{{ blogs.content }} <a href="{% url 'read_more' my.id %}"> read more </a> </p>
+                      <div class="post-options">
+                        <div class="row">
+                          <div class="col-6">
+                            <ul class="post-tags">
+                              <li><i class="fa fa-tags"></i></li>
+
+                              <li><a href="#">{{ my.category }}</a></li>
+                            </ul>
+                          </div>
+                          <div class="col-6">
+                            <ul class="post-share">
+                              <li><i class="fa fa-share-alt"></i></li>
+                              <li><a href="#">Facebook</a>,</li>
+                              <li><a href="#"> Twitter</a></li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+       {% endfor %}
+
+
+
+
+                <div class="col-lg-12">
+                  <div class="main-button">
+                    <a href="{% url 'home' %}">View All Posts</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="sidebar">
+              <div class="row">
+                <div class="col-lg-12">
+
+
+
+                  <div class="sidebar-item search">
+                    <form id="search_form" name="gs"  action="{%url 'search_by_blog_title' %}">
+                      <input type="text" name="title" class="searchText" placeholder="type to search..." autocomplete="on">
+                    </form>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="sidebar-item recent-posts">
+                    <div class="sidebar-heading">
+
+
+                      <h2>Recent Posts</h2>
+
+
+                    </div>
+                    <div class="content">
+
+                        {% for recent_blogs in recent_blogs %}
+                      <ul>
+                        <li><a href="{% url 'read_more' recent_blogs.id %}">
+                          <h5>{{ recent_blogs.title }}</h5>
+                          <span>{{ recent_blogs.created }}</span>
+                        </a></li>
+                      </ul>
+                        {% endfor %}
+
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="sidebar-item categories">
+                    <div class="sidebar-heading">
+                      <h2>Categories</h2>
+                    </div>
+                    <div class="content">
+                      <ul>
+                         <li><a href="{% url 's_by_Sports' %}" >- Sports ( working )</a></li>
+                        <li><a href="#">- Awesome Layouts</a></li>
+                        <li><a href="#">- Creative Ideas</a></li>
+                        <li><a href="#">- Responsive Templates</a></li>
+                        <li><a href="#">- HTML5 / CSS3 Templates</a></li>
+                        <li><a href="#">- Creative &amp; Unique</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="sidebar-item tags">
+                    <div class="sidebar-heading">
+                      <h2>Tags ( Comming soon )</h2>
+                    </div>
+                    <div class="content">
+                      <ul>
+                        <li><a href="#">Lifestyle</a></li>
+                        <li><a href="#">Creative</a></li>
+                        <li><a href="#">Computer science</a></li>
+                        <li><a href="#">Inspiration</a></li>
+                        <li><a href="#">Motivation</a></li>
+                        <li><a href="#">Bitcoin</a></li>
+                        <li><a href="#">Freelancing</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <footer>
+
+
+<br>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <ul class="social-icons">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Behance</a></li>
+              <li><a href="#">Linkedin</a></li>
+              <li><a href="#">Dribbble</a></li>
+            </ul>
+          </div>
+
+
+          <div class="col-lg-12">
+            <div class="copyright-text">
+              <p>Copyright 2021 Stand
+                  | zizopixels </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Additional Scripts -->
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/owl.js"></script>
+    <script src="assets/js/slick.js"></script>
+    <script src="assets/js/isotope.js"></script>
+    <script src="assets/js/accordions.js"></script>
+
+    <script language = "text/Javascript">
+      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
+      function clearField(t){                   //declaring the array outside of the
+      if(! cleared[t.id]){                      // function makes it static and global
+          cleared[t.id] = 1;  // you could use true and false, but that's more typing
+          t.value='';         // with more chance of typos
+          t.style.color='#fff';
+          }
+      }
+    </script>
+
 
 
 
