--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -21,6 +21,24 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,11 +140,7 @@
             </div>
           </div>
 
-          <div class="col-lg-12">
-            <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="450px" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-          </div>
+
 
         </div>
       </div>
@@ -137,26 +151,31 @@
 
 
 
+    <footer>
+
+<br>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <ul class="social-icons">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Behance</a></li>
+              <li><a href="#">Linkedin</a></li>
+              <li><a href="#">Dribbble</a></li>
+            </ul>
+          </div>
 
 
-
-
-{##}
-{#    <form action="{% url 'a_blog' %}" method="POST" enctype="multipart/form-data">#}
-{#    {% csrf_token %}#}
-{##}
-{#    {{ form.as_p }}#}
-{##}
-{##}
-{#  <button type="submit" name="submit">Add</button>#}
-{##}
-{##}
-{#    </form>#}
-
-
-
-
-
+          <div class="col-lg-12">
+            <div class="copyright-text">
+              <p>Copyright 2021 Stand
+                  | zizopixels </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
