--- a/templates/profile.html
+++ b/templates/profile.html
@@ -69,7 +69,7 @@
 
                Welcome {{ user.get_username }} //
 
-     <a class="" href="{% url 'logout' %}">Logout</a>
+
 
             </ul>
           </div>
@@ -151,6 +151,31 @@
 
 
 
+<footer>
+
+<br>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <ul class="social-icons">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Behance</a></li>
+              <li><a href="#">Linkedin</a></li>
+              <li><a href="#">Dribbble</a></li>
+            </ul>
+          </div>
+
+
+          <div class="col-lg-12">
+            <div class="copyright-text">
+              <p>Copyright 2021 Stand
+                  | zizopixels </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
