--- a/templates/user.html
+++ b/templates/user.html
@@ -65,7 +65,7 @@
       </li>
                 <li>
               Welcome - <a href="{% url 'profile' user.id %}" >
-               {{ user.get_username }}
+               {{ r_user }}
                </a>
                 </li>
             </ul>
