--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -20,16 +20,19 @@
 
 
 
-
-
     <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
+
+
+
           <a class="navbar-brand" href="{% url 'home' %}"><h2>zizo pixels <em>.</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
+
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
@@ -38,7 +41,13 @@
                 </a>
               </li>
 
-
+              <li class="nav-item">
+               <a class="nav-link" href="{% url 'add_blog'  %}">
+        <span style="font-size: 1.5em; ">
+                   <i class="fas fa-plus-square"></i>
+        </span>
+               </a>
+              </li>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -51,38 +60,16 @@
             <a class="dropdown-item" href="{% url 'my_followers' user.id%}">My followers</a>
         </div>
       </li>
-
-
-
-              <li class="nav-item">
-               <a class="" href="{% url 'add_blog'  %}">Add blog </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
-
-
-               Welcome {{ user.get_username }} //
-
-     <a class="" href="{% url 'logout' %}">Logout</a>
-
+                <li>
+              Welcome - <a href="{% url 'profile' user.id %}" >
+               {{ user.get_username }}
+               </a>
+                </li>
             </ul>
           </div>
         </div>
-
-
-
       </nav>
     </header>
-
-
-
-
 
 
 <br><br><br><br><br>
@@ -141,6 +128,35 @@
 
 
 
+
+
+
+
+    <footer>
+
+<br>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <ul class="social-icons">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Behance</a></li>
+              <li><a href="#">Linkedin</a></li>
+              <li><a href="#">Dribbble</a></li>
+            </ul>
+          </div>
+
+
+          <div class="col-lg-12">
+            <div class="copyright-text">
+              <p>Copyright 2021 Stand
+                  | zizopixels </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
