--- a/templates/search_by_blog_title.html
+++ b/templates/search_by_blog_title.html
@@ -241,9 +241,9 @@
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>Copyright 2020 Stand Blog Co.
+              <p>Copyright 2021 Stand Blog Co.
 
-                 | Design: <a rel="nofollow" href="https://templatemo.com" target="_parent">TemplateMo</a></p>
+                 | zizopixels
             </div>
           </div>
         </div>
