--- a/templates/search_by_category.html
+++ b/templates/search_by_category.html
@@ -284,10 +284,9 @@
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>Copyright 2020 Stand Blog Co.
+              <p>Copyright 2021 Stand Blog Co.
 
-                 | Design: <a rel="nofollow" href="https://templatemo.com" target="_parent">TemplateMo</a></p>
-            </div>
+                 | zizopixels </div>
           </div>
         </div>
       </div>
