--- a/templates/user.html
+++ b/templates/user.html
@@ -101,6 +101,14 @@
                              <h5>{{users.email}}</h5>
 
 
+
+       {% if check1.boolean == True%}
+                      <a class="btn btn-primary btn-sm" href="{% url 'unfollow' check1.id%}" >unfollow</a>
+       {% else %}
+            <a class="btn btn-primary btn-sm" href="{% url 'follow_user' user.id%}" >Follow</a>
+        {% endif %}
+
+
                 {% if check1.boolean == True%}
                       <a href="{% url 'unfollow' check1.id%}" >
                              <button type="button" class="btn btn-outline-info">Following</button>
