--- a/templates/user.html
+++ b/templates/user.html
@@ -97,9 +97,7 @@
                     </div>
 
         <div class="col-sm-6">
-                             <h3>@{{ get_user }}</h3><br>
-                             <h5>{{users.email}}</h5>
-
+                             <h3>@{{ get_user }}
 
 
        {% if check1.boolean == True%}
@@ -111,6 +109,14 @@
                               <button type="button" class="btn btn-outline-info">Follow</button>
                         </a>
         {% endif %}
+
+                             </h3>
+
+
+            <br>
+                             <h5>{{users.email}}</h5>
+
+
 
 
 
