--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
  <link href="{% static 'style.css' %}" rel="stylesheet">
  <link href="{% static 'flex-slider.css' %}" rel="stylesheet">
  <link href="{% static 'fontawesome.css' %}" rel="stylesheet">
- <link href="{% static 'owl.css' %}" rel="stylesheet">
+{# <link href="{% static 'owl.css' %}" rel="stylesheet">#}
  <link href="{% static 'templatemo-stand-blog.css' %}" rel="stylesheet">
 
 
