--- a/templates/index.html
+++ b/templates/index.html
@@ -317,9 +317,9 @@
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+{#    <!-- Bootstrap core JavaScript -->#}
+{#    <script src="vendor/jquery/jquery.min.js"></script>#}
+{#    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>#}
 
      <!-- Additional Scripts -->
     <script src="/static/js/custom.js"></script>
