--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
                 <li>
                    <a href="{% url 'profile' user.id %}" >
             {% if  avatar.avatar.url  == None %}
-                 <img src="media/profile.png" alt="" style=" width: 50px;
+                 <img src="/media/profile.png" alt="" style=" width: 50px;
               height: 50px;
               border-radius: 50%; /*don't forget prefixes*/
 
@@ -344,29 +344,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/slick.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/accordions.js"></script>
-
-    <script language = "text/Javascript">
-      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-      function clearField(t){                   //declaring the array outside of the
-      if(! cleared[t.id]){                      // function makes it static and global
-          cleared[t.id] = 1;  // you could use true and false, but that's more typing
-          t.value='';         // with more chance of typos
-          t.style.color='#fff';
-          }
-      }
-    </script>
-
 
 
 
