--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
  <link href="{% static 'templatemo-stand-blog.css' %}" rel="stylesheet">
 
 
-{##}
-{#<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>#}
+
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 {##}
 {# <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">#}
@@ -317,27 +317,6 @@
       </div>
     </footer>
 
-{#    <!-- Bootstrap core JavaScript -->#}
-{#    <script src="vendor/jquery/jquery.min.js"></script>#}
-{#    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>#}
-
-     <!-- Additional Scripts -->
-    <script src="/static/js/custom.js"></script>
-    <script src="/static/js/owl.js"></script>
-    <script src="/static/js/slick.js"></script>
-    <script src="/static/js/isotope.js"></script>
-    <script src="/static/js/accordions.js"></script>
-
-    <script language = "text/Javascript">
-      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-      function clearField(t){                   //declaring the array outside of the
-      if(! cleared[t.id]){                      // function makes it static and global
-          cleared[t.id] = 1;  // you could use true and false, but that's more typing
-          t.value='';         // with more chance of typos
-          t.style.color='#fff';
-          }
-      }
-    </script>
 
 
 
