--- a/templates/profile.html
+++ b/templates/profile.html
@@ -89,7 +89,7 @@
                      <div class="col-sm-6 text-center">
 
                         {% if  avatar.avatar.url == None %}
-                             <img src="/media/profile.png" alt="" >
+                             <img src="https://res.cloudinary.com/drp0eidwz/image/upload/v1619068825/media/profile_pgiwth.png" alt="" >
                         {% else %}
                            <img src="{{ avatar.avatar.url }}" alt="">
 
